--- a/unityplugins-site/index.html
+++ b/unityplugins-site/index.html
@@ -96,13 +96,14 @@
           <div class="col col-lg-3 assets">
             <div class="uk-inline uk-slider-items uk-transition-toggle ">
               <img src="./images/plu1.jpg" alt="">
-              <a href="#plugin1" uk-toggle>
-                <div class="uk-position-center uk-overlay-primary uk-transition-fade">
-                  Quick View
-                </div>
-              </a>
+
               <div class="uk-overlay uk-overlay-primary uk-remove-padding uk-position-bottom uk-transition-fade">
-                <p>Default Lorem ipsum dolor sit amet.</p>
+                <a href="#plugin1" uk-toggle>
+                  <div class=" uk-overlay-primary uk-transition-fade uk-position-relative uk-width-1-1 uk-text-center uk-padding-remove">
+                    Quick View
+                  </div>
+                </a>
+                <p class="uk-padding-remove">Default Lorem ipsum dolor sit amet.</p>
               </div>
 
             </div>
