updated "Quick View" overlay

--- a/unityplugins-site/index.html
+++ b/unityplugins-site/index.html
@@ -97,9 +97,14 @@
             <div class="uk-inline uk-slider-items uk-transition-toggle ">
               <img src="./images/plu1.jpg" alt="">
 
+              <!-- <a href="#plugin1" uk-toggle>
+                <div class=" uk-overlay-primary uk-transition-fade  uk-width-1-1 uk-position-bottom uk-text-center  ">
+                  Quick View
+                </div>
+              </a> -->
               <div class="uk-overlay uk-overlay-primary uk-remove-padding uk-position-bottom uk-transition-fade">
                 <a href="#plugin1" uk-toggle>
-                  <div class=" uk-overlay-primary uk-transition-fade uk-position-relative uk-width-1-1 uk-text-center uk-padding-remove">
+                  <div class=" uk-overlay-primary uk-transition-fade  uk-width-1-1 uk-position-top uk-text-center  ">
                     Quick View
                   </div>
                 </a>
