index_slider: without isotope using slider to display plugins index: polished modal

--- a/unityplugins-site/index_slider.html
+++ b/unityplugins-site/index_slider.html
@@ -71,7 +71,7 @@
   </section>
 
   <!-- Container for viewing plugins in grid/slider -->
-  <div class="uk-margin-large-top uk-section-primary" style="min-height:550px;" id="plugins">
+  <div class="uk-margin-large-top uk-section-primary" style="min-height:250px;" id="plugins">
 
     <!-- Nav bar displayed full width and sticky on scroll -->
     <div class="uk-container-expand " style="background-color:#1c2024; box-shadow: 3px 11px 13px 0px #151313; " data-uk-sticky="sel-target: .uk-navbar; cls-active: uk-navbar-sticky; offset:77">
@@ -86,108 +86,121 @@
     </div>
 
     <!-- Plugin items in this container -->
-    <div class="uk-container">
+    <div class="uk-container uk-child-width-1-1@m">
 
       <hr class="uk-margin-remove uk-padding-small">
       <!-- isotope integration with bootstrap layout  -->
-      <div class="container">
-        <div class="row justify-content-md-left">
-
-          <div class="col col-lg-3 assets">
-            <div class="uk-inline uk-slider-items uk-transition-toggle ">
-              <img src="./images/plu1.jpg" alt="">
-
-              <!-- <a href="#plugin1" uk-toggle>
-                <div class=" uk-overlay-primary uk-transition-fade  uk-width-1-1 uk-position-bottom uk-text-center  ">
-                  Quick View
+      <div class="swiper-container">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide assets">
+            <div class="uk-card uk-card-body">
+              <div class="uk-inline uk-slider-items uk-transition-toggle">
+                <img src="./images/plu2.jpg" alt="">
+                <div class="uk-overlay uk-overlay-primary uk-remove-padding uk-position-bottom uk-transition-fade">
+                  <a href="#plugin1" uk-toggle>
+                    <div class=" uk-overlay-primary uk-transition-fade  uk-width-1-1 uk-position-top uk-text-center  ">
+                      Quick View
+                    </div>
+                  </a>
+                  <p class="uk-padding-remove">Default Lorem ipsum dolor sit amet.</p>
                 </div>
-              </a> -->
-              <div class="uk-overlay uk-overlay-primary uk-remove-padding uk-position-bottom uk-transition-fade">
-                <a href="#plugin1" uk-toggle>
-                  <div class=" uk-overlay-primary uk-transition-fade  uk-width-1-1 uk-position-top uk-text-center  ">
-                    Quick View
-                  </div>
-                </a>
-                <p class="uk-padding-remove">Default Lorem ipsum dolor sit amet.</p>
-              </div>
-
-            </div>
-          </div>
-
-          <div class="col col-lg-3 assets">
-            <div class="uk-inline uk-slider-items uk-transition-toggle">
-              <img src="./images/plu2.jpg" alt="">
-              <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-transition-fade">
-                <p>Default Lorem ipsum dolor sit amet.</p>
               </div>
             </div>
           </div>
-          <div class="col col-lg-3 social">
-            <div class="uk-inline uk-slider-items uk-transition-toggle">
-              <img src="./images/plu1.jpg" alt="">
-              <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-transition-fade">
-                <p>Default Lorem ipsum dolor sit amet.</p>
+          <div class="swiper-slide social">
+            <div class="uk-card uk-card-body">
+              <div class="uk-inline uk-slider-items uk-transition-toggle">
+                <img src="./images/plu2.jpg" alt="">
+                <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-transition-fade">
+                  <p>Default Lorem ipsum dolor sit amet.</p>
+                </div>
               </div>
             </div>
           </div>
-          <div class="col col-lg-3 social">
-            <div class="uk-inline uk-slider-items uk-transition-toggle ">
-              <img src="./images/plu1.jpg" alt="">
-              <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-transition-fade">
-                <p>Default Lorem ipsum dolor sit amet.</p>
+          <div class="swiper-slide assets">
+            <div class="uk-card uk-card-body">
+              <div class="uk-inline uk-slider-items uk-transition-toggle">
+                <img src="./images/plu2.jpg" alt="">
+                <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-transition-fade">
+                  <p>Default Lorem ipsum dolor sit amet.</p>
+                </div>
               </div>
             </div>
           </div>
-          <div class="col col-lg-3">
-            <div class="uk-inline uk-slider-items uk-transition-toggle assets">
-              <img src="./images/plu1.jpg" alt="">
-              <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-transition-fade">
-                <p>Default Lorem ipsum dolor sit amet.</p>
+          <div class="swiper-slide">
+            <div class="uk-card uk-card-body">
+              <div class="uk-inline uk-slider-items uk-transition-toggle">
+                <img src="./images/plu2.jpg" alt="">
+                <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-transition-fade">
+                  <p>Default Lorem ipsum dolor sit amet.</p>
+                </div>
               </div>
             </div>
           </div>
-          <div class="col col-lg-3 assets">
-            <div class="uk-inline uk-slider-items uk-transition-toggle ">
-              <img src="./images/plu1.jpg" alt="">
-              <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-transition-fade">
-                <p>Default Lorem ipsum dolor sit amet.</p>
+          <div class="swiper-slide">
+            <div class="uk-card uk-card-body">
+              <div class="uk-inline uk-slider-items uk-transition-toggle">
+                <img src="./images/plu2.jpg" alt="">
+                <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-transition-fade">
+                  <p>Default Lorem ipsum dolor sit amet.</p>
+                </div>
               </div>
             </div>
           </div>
-          <div class="col col-lg-3 assets">
-            <div class="uk-inline uk-slider-items uk-transition-toggle">
-              <img src="./images/plu2.jpg" alt="">
-              <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-transition-fade">
-                <p>Default Lorem ipsum dolor sit amet.</p>
+          <div class="swiper-slide">
+            <div class="uk-card uk-card-body">
+              <div class="uk-inline uk-slider-items uk-transition-toggle">
+                <img src="./images/plu2.jpg" alt="">
+                <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-transition-fade">
+                  <p>Default Lorem ipsum dolor sit amet.</p>
+                </div>
               </div>
             </div>
           </div>
-          <div class="col col-lg-3 social">
-            <div class="uk-inline uk-slider-items uk-transition-toggle">
-              <img src="./images/plu1.jpg" alt="">
-              <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-transition-fade">
-                <p>Default Lorem ipsum dolor sit amet.</p>
+          <div class="swiper-slide">
+            <div class="uk-card uk-card-body">
+              <div class="uk-inline uk-slider-items uk-transition-toggle">
+                <img src="./images/plu2.jpg" alt="">
+                <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-transition-fade">
+                  <p>Default Lorem ipsum dolor sit amet.</p>
+                </div>
               </div>
             </div>
           </div>
-          <div class="col col-lg-3 social">
-            <div class="uk-inline uk-slider-items uk-transition-toggle ">
-              <img src="./images/plu1.jpg" alt="">
-              <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-transition-fade">
-                <p>Default Lorem ipsum dolor sit amet.</p>
+          <div class="swiper-slide">
+            <div class="uk-card uk-card-body">
+              <div class="uk-inline uk-slider-items uk-transition-toggle">
+                <img src="./images/plu2.jpg" alt="">
+                <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-transition-fade">
+                  <p>Default Lorem ipsum dolor sit amet.</p>
+                </div>
               </div>
             </div>
           </div>
-          <div class="col col-lg-3 assets">
-            <div class="uk-inline uk-slider-items uk-transition-toggle ">
-              <img src="./images/plu1.jpg" alt="">
-              <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-transition-fade">
-                <p>Default Lorem ipsum dolor sit amet.</p>
+          <div class="swiper-slide">
+            <div class="uk-card uk-card-body">
+              <div class="uk-inline uk-slider-items uk-transition-toggle">
+                <img src="./images/plu2.jpg" alt="">
+                <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-transition-fade">
+                  <p>Default Lorem ipsum dolor sit amet.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="uk-card uk-card-body">
+              <div class="uk-inline uk-slider-items uk-transition-toggle">
+                <img src="./images/plu2.jpg" alt="">
+                <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-transition-fade">
+                  <p>Default Lorem ipsum dolor sit amet.</p>
+                </div>
               </div>
             </div>
           </div>
         </div>
-
+        <!-- Add Arrows -->
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
       </div>
 
     </div>
@@ -306,6 +319,10 @@
         slidesPerView: 3,
         slidesPerColumn: 2,
         spaceBetween: 30,
+        navigation: {
+          nextEl: '.swiper-button-next',
+          prevEl: '.swiper-button-prev',
+        },
         pagination: {
           el: '.swiper-pagination',
           clickable: true,
@@ -327,7 +344,7 @@
       <button class="uk-modal-close-default" type="button" uk-close></button>
       <div class="uk-grid-collapse uk-child-width-1-1@s uk-flex-middle" uk-grid>
         <h1 class="uk-text-center .uk-text-small" style="font-size: 1.5rem !important;">WRP IOS Video Player</h1>
-        <div class="" name="col1" style="" >
+        <div class="" name="col1" style="">
           <div class="uk-padding-small" uk-slideshow uk-grid>
             <div class="uk-width-auto@m">
               <ul class="uk-thumbnav uk-thumbnav-vertical" uk-margin>
@@ -355,7 +372,6 @@
               <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slideshow-item="previous"></a>
               <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slideshow-item="next"></a>
             </div>
-
           </div>
 
           <div class="uk-padding-small">
