27/2/18 - Thumbnail db link - done

--- a/unityplugins-site/index.html
+++ b/unityplugins-site/index.html
@@ -65,9 +65,10 @@
 
       <article class="uk-article uk-margin-xlarge-top">
         <!-- <h2 id="article-1" class="uk-article-title uk-margin-medium-bottom">Lorem Ipsum H2<a href="#" data-uk-totop data-uk-scroll="duration: 400" class="tm-totop uk-float-right uk-margin-small-top"></a></h2> -->
-        <p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores
-          alias consequatur aut perferendis doloribus asperiores repellat.</p>
-        <p>At vero eos et accusamus et iusto erunt impedit quo minus facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibue. Itaque earum rerendis doloribus asperiores repellat.</p>
+        <p>Play and let play! We are developing casual, fun and artsy games for facebook, iPhone and android! .
+        </p>
+        <p>Mission <br> -To make awesome fun games.<br> -To be honest in everything that we do.<br> -To have FUN while creating (awesome) FUN (games) and working HARD.<br> -To make lots of money, use it to help some people (kids mostly) and also do something
+          for our wonderful little blue planet, then retire early and travel the world...eat italian pizzas, french baguettes, belgian chocolates, turkish delights,... and CHEESEBOARD!</p>
       </article>
 
     </div>
@@ -99,7 +100,7 @@
           <div class="col col-lg-3 assets">
             <div class="uk-inline uk-slider-items uk-transition-toggle ">
               <img src="./images/plu1.jpg" alt="">
-              <div class="uk-overlay uk-overlay-primary uk-remove-padding uk-position-bottom uk-transition-fade" >
+              <div class="uk-overlay uk-overlay-primary uk-remove-padding uk-position-bottom uk-transition-fade">
                 <a href="#plugin" uk-toggle>
                   <div class=" uk-overlay-primary uk-transition-fade  uk-width-1-1 uk-position-top uk-text-center  ">
                     Quick View
@@ -323,7 +324,7 @@
     <div class="uk-grid-collapse uk-child-width-1-1@s uk-flex-middle" uk-grid>
       <h1 class="uk-text-center .uk-text-small" style="font-size: 1.5rem !important;">WRP IOS Video Player</h1>
       <div class="" name="col1" style="">
-        <div class="uk-padding-small" uk-slideshow uk-grid>
+        <div class="uk-padding-large uk-padding-remove-bottom" uk-slideshow uk-grid>
           <div class="uk-width-auto@m">
             <ul class="uk-thumbnav uk-thumbnav-vertical" uk-margin>
               <li uk-slideshow-item="0"><a href="#"><img src="./images/plu1.jpg" width="60" alt=""></a></li>
@@ -344,7 +345,7 @@
                 <img src="./images/plu3.jpg" alt="" uk-cover>
               </li>
               <li>
-                <iframe width="440" height="315" src="https://www.youtube.com/embed/TUUUh-51t1k?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <iframe width="640" height="515" src="https://www.youtube.com/embed/TUUUh-51t1k?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
               </li>
             </ul>
             <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slideshow-item="previous"></a>
