28/2/18 - Save changes before revert

--- a/unityplugins-site/index.html
+++ b/unityplugins-site/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/main.css" />
   <link rel="stylesheet" href="css/flickity.css" />
   <link rel="stylesheet" href="css/swiper.min.css" />
+  <link rel="stylesheet" href="css/loading_animation.css" />
 
   <style>
     [class*="col-"] {
@@ -97,6 +98,7 @@
       <div class="container">
         <div class="row justify-content-md-left" id="plugins_list">
 
+          Temporary text
 
 
         </div>
