--- a/unityplugins-site/index.html
+++ b/unityplugins-site/index.html
@@ -98,9 +98,92 @@
       <div class="container">
         <div class="row justify-content-md-left" id="plugins_list">
 
-          Temporary text
+          <div class="col col-lg-3 assets">
+            <div class="uk-inline uk-slider-items uk-transition-toggle ">
+              <img src="./images/plu1.jpg" alt="">
+              <div class="uk-overlay uk-overlay-primary uk-remove-padding uk-position-bottom uk-transition-fade">
+                <a href="#plugin" uk-toggle>
+                  <div class=" uk-overlay-primary uk-transition-fade  uk-width-1-1 uk-position-top uk-text-center  ">
+                    Quick View
+                  </div>
+                </a>
+                <p class="uk-padding-remove">Default Lorem ipsum dolor sit amet.</p>
+              </div>
+            </div>
+          </div>
 
-
+          <div class="col col-lg-3 assets">
+            <div class="uk-inline uk-slider-items uk-transition-toggle">
+              <img src="./images/plu2.jpg" alt="">
+              <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-transition-fade">
+                <p>Default Lorem ipsum dolor sit amet.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col col-lg-3 social">
+            <div class="uk-inline uk-slider-items uk-transition-toggle">
+              <img src="./images/plu1.jpg" alt="">
+              <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-transition-fade">
+                <p>Default Lorem ipsum dolor sit amet.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col col-lg-3 social">
+            <div class="uk-inline uk-slider-items uk-transition-toggle ">
+              <img src="./images/plu1.jpg" alt="">
+              <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-transition-fade">
+                <p>Default Lorem ipsum dolor sit amet.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col col-lg-3">
+            <div class="uk-inline uk-slider-items uk-transition-toggle assets">
+              <img src="./images/plu1.jpg" alt="">
+              <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-transition-fade">
+                <p>Default Lorem ipsum dolor sit amet.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col col-lg-3 assets">
+            <div class="uk-inline uk-slider-items uk-transition-toggle ">
+              <img src="./images/plu1.jpg" alt="">
+              <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-transition-fade">
+                <p>Default Lorem ipsum dolor sit amet.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col col-lg-3 assets">
+            <div class="uk-inline uk-slider-items uk-transition-toggle">
+              <img src="./images/plu2.jpg" alt="">
+              <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-transition-fade">
+                <p>Default Lorem ipsum dolor sit amet.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col col-lg-3 social">
+            <div class="uk-inline uk-slider-items uk-transition-toggle">
+              <img src="./images/plu1.jpg" alt="">
+              <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-transition-fade">
+                <p>Default Lorem ipsum dolor sit amet.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col col-lg-3 social">
+            <div class="uk-inline uk-slider-items uk-transition-toggle ">
+              <img src="./images/plu1.jpg" alt="">
+              <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-transition-fade">
+                <p>Default Lorem ipsum dolor sit amet.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col col-lg-3 assets">
+            <div class="uk-inline uk-slider-items uk-transition-toggle ">
+              <img src="./images/plu1.jpg" alt="">
+              <div class="uk-overlay uk-overlay-primary uk-position-bottom uk-transition-fade">
+                <p>Default Lorem ipsum dolor sit amet.</p>
+              </div>
+            </div>
+          </div>
         </div>
 
       </div>
