28/2/18 - Added directory scan instead of images database, added images

--- a/unityplugins-site/index.html
+++ b/unityplugins-site/index.html
@@ -24,6 +24,7 @@
   <script src="./fetchdata/fetch.js"></script>
   <script>
     getList();
+    // testDBConnect();
   </script>
 </head>
 
@@ -385,6 +386,7 @@
     </div>
   </div>
 </div>
+
 
 
 </html>
